--- a/proposal/05-timeline.tex
+++ b/proposal/05-timeline.tex
@@ -1,1 +1,32 @@
-\section{Timeline}
+
+	\section{Timeline}
+	\resizebox{\columnwidth}{!}{%
+		\begin{tabular}{||c | c||} 
+			\hline\hline
+			Week & Task \\ [2ex]
+			\hline\hline
+			Week 1 & First week is to Analyze and Preprocess the dataset \\ [2ex]
+			\hline
+			Week 2 &  Parsing the dataset and Extracting features from audio files\\ [2ex]
+			\hline
+			Week 3 & Extracting features and Analyzing audio files \\ [2ex]
+			\hline
+			Week 4 & Construct and apply the machine learning model on the given data  \\ [2ex]
+			\hline
+			Week 5 & Analyze and Infer results of the model\\ [2ex] 
+			\hline 
+			Week 6 & Build a Backend system and develop API's for interaction with Frontend  \\ [2ex] 
+			\hline
+			Week 7 & Develop API's in the Backend \\ [2ex] 
+			\hline
+			Week 8 & Develop Frontend component - SpatioTemporal analysis \\ [2ex] 
+			\hline
+			Week 9 & Develop Frontend component - Mistmatch analysis \\ [1ex] 
+			\hline
+			Week 10 & Develop Frontend component - Integrate User Interaction \\ [1ex] 
+			\hline
+		\end{tabular}
+	}
+	\linebreak
+	\linebreak
+	
