--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -1,37 +1,49 @@
-@misc{Grinstein:2002:IVV,
-  author = {Georges Grinstein and Daniel Keim and Matthew Ward},
-  title = {Information Visualization, Visual Data Mining, and Its Application to Drug Design},
-  howpublished = {IEEE Visualization Course \#1 Notes},
+@misc{4,
+  author = {Mark Cartwright, Ana Elisa Mendez Mendez1, Jason Cramer1, Vincent Lostanlen
+  Graham Dove, Ho-Hsiang Wu1, Justin Salamon, Oded Nov, and Juan Pablo Bello},
+  title = {SONYC URBAN SOUND TAGGING (SONYC-UST):
+  A MULTILABEL DATASET FROM AN URBAN ACOUSTIC SENSOR NETWORK},
+  howpublished = {Detection and Classification of Acoustic Scenes and Events 201},
   month = {October},
-  year = {2002},
-	url = {http://vis.computer.org/vis2002/program/tutorials/tutorial_01_abstract.html}
+  year = {2019},
+
 }
 
-@Article{Isenberg:2017:VMC,
-  author = {Petra Isenberg and Florian Heimerl and Steffen Koch and Tobias Isenberg and Panpan Xu and Chad Stolper and Michael Sedlmair and Jian Chen and Torsten M{\"o}ller and John Stasko},
-	title = {{vispubdata.org: A Metadata Collection about {IEEE} Visualization ({VIS}) Publications}},
-	journal = {IEEE Transactions on Visualization and Computer Graphics},
-	year = {2017},
-	volume = {23},
-	OPTnumber = {},
-	OPTmonth = {},
-	OPTpages = {},
-	doi = {https://doi.org/10.1109/TVCG.2016.2615308},
-  OPTgooglescholarid = {},
-	note = {To appear},
-}
 
+
+@mastersthesis{1,
+  author = { M. S. Hammer, T. K. Swinburn, and R. L. Neitzel},
+  title = {Environmental noise pollution in the united states: developing an
+  effective public health response},
+	address = {US},
+	
+  year = 2013,
+}
+@mastersthesis{2,
+	author = {A. Bronzaft},
+	title = {Neighborhood noise and its consequences},
+	address = {New York},
+	school = {Survey Research Unit, School of Public Affairs, Baruch College}
+	year = 2007,
+}
+@mastersthesis{3,
+	author = {World Health Organization},
+	title = {“Burden of disease from environmental noise: Quantification of healthy life years lost in europe},
+	address = {Europe},
+	year = 2001,
+}
 @mastersthesis{Kindlmann:1999:SAG,
-  author = {Gordon Kindlmann},
-  title = {Semi-Automatic Generation of Transfer Functions for Direct Volume Rendering},
-  school = {Cornell University},
-	address = {USA},
-	url = {http://www.graphics.cornell.edu/pubs/1999/Kin99.html},
-  year = 1999,
+	author = { M. S. Hammer, T. K. Swinburn, and R. L. Neitzel},
+	title = {Environmental noise pollution in the united states: developing an
+	effective public health response},
+	address = {US},
+	
+	year = 2013,
 }
 
 @manual{Kitware:2003,
-  title = {The Visualization Toolkit User's Guide},
+  title = {Environmental noise pollution in the united states: developing an
+  effective public health response},
   organization = {Kitware, Inc.},
   year = {2003},
   month = {January},
