--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -90,17 +90,16 @@
 %% This is how authors are specified in the journal style
 
 %% indicate IEEE Member or Student Member in form indicated below
-\author{Roy G. Biv, Ed Grimley, \textit{Member, IEEE}, and Martha Stewart}
-%\authorfooter{
-%% insert punctuation at end of each item
-%\item
- %Roy G. Biv is with Starbucks Research. E-mail: roy.g.biv@aol.com.
-%\item
- %Ed Grimley is with Grimley Widgets, Inc.. E-mail: ed.grimley@aol.com.
-%\item
- %Martha Stewart is with Martha Stewart Enterprises at Microsoft
- %Research. E-mail: martha.stewart@marthastewart.com.
-%}
+\author{Ashwin Bhaskar Srivatsa, Sasanka Mouli Veleti  and Sidharth Veluvolu}
+\authorfooter{
+	%% insert punctuation at end of each item
+	\item
+	Ashwin Bhaskar Srivatsa, E-mail: asriva36@uic.edu
+	\item
+	Sasanka Mouli Veleti, E-mail: ed.grimley@aol.com.
+	\item
+	Sidharth Veluvolu, Email:
+}
 
 %other entries to be set up for journal
 \shortauthortitle{Biv \MakeLowercase{\textit{et al.}}: Global Illumination for Fun and Profit}
@@ -173,7 +172,6 @@
 \input{03-data}
 \input{04-research}
 \input{05-timeline} 
-
 
 %\bibliographystyle{abbrv}
 \bibliographystyle{abbrv-doi}
