--- a/proposal/01-introduction.tex
+++ b/proposal/01-introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-Noise Pollution is a grievous problem which needs to be tackled, as it’s a growing concern for many urban residents, many have reported that they suffered with behavioral and emotional consequences, such as difficulty in sleeping, relaxing and feeling annoyed, angry or upset ~\cite{1} ~\cite{2} ~\cite{3}.In order to mitigate this problem, there is a need to understand sound event detection. Sound event detection is defined as recognition of individual sound events in audio, e.g., “dog barking, engine exhaust noise” requiring estimation of onset and offset for distinct sound for sound event detection and identification of sound.
+Noise Pollution is a grievous problem which needs to be tackled, as it’s a growing concern for many urban residents, many have reported that they suffered with behavioral and emotional consequences, such as difficulty in sleeping, relaxing and feeling annoyed, angry or upset ~\cite{1,2,3}. In order to mitigate this problem, there is a need to understand sound event detection. Sound event detection is defined as recognition of individual sound events in audio, e.g., “dog barking, engine exhaust noise” requiring estimation of onset and offset for distinct sound for sound event detection and identification of sound.
 
  Applications for sound event detection can found in areas of Healthcare, security, audio and video-based indexing and retrieval. Sound class classification is usually approached as a supervised learning, with sound classes defined beforehand, we have taken a labelled Spatial and Temporal recording data which comprises of 3068 labelled 10 sec recordings from the Sounds of New York City (SONYC) acoustic network (An acoustic network is a method of positioning equipment using sound waves). Using this data, we plan to develop an application where the authorities or the user can narrow down the sounds generated at any particular location. We also aim to address the Mismatch of the testing data in this dataset.
 
