--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -1,13 +1,4 @@
-@misc{4,
-  author = {Mark Cartwright, Ana Elisa Mendez Mendez1, Jason Cramer1, Vincent Lostanlen
-  Graham Dove, Ho-Hsiang Wu1, Justin Salamon, Oded Nov, and Juan Pablo Bello},
-  title = {SONYC URBAN SOUND TAGGING (SONYC-UST):
-  A MULTILABEL DATASET FROM AN URBAN ACOUSTIC SENSOR NETWORK},
-  howpublished = {Detection and Classification of Acoustic Scenes and Events 201},
-  month = {October},
-  year = {2019},
 
-}
 
 
 
@@ -28,90 +19,27 @@
 }
 @mastersthesis{3,
 	author = {World Health Organization},
-	title = {“Burden of disease from environmental noise: Quantification of healthy life years lost in europe},
+	title = {Burden of disease from environmental noise: Quantification of healthy life years lost in europe},
 	address = {Europe},
 	year = 2001,
 }
-@mastersthesis{Kindlmann:1999:SAG,
-	author = { M. S. Hammer, T. K. Swinburn, and R. L. Neitzel},
-	title = {Environmental noise pollution in the united states: developing an
-	effective public health response},
-	address = {US},
+
+@misc{4,
+	author = {Mark Cartwright, Ana Elisa Mendez Mendez1, Jason Cramer1, Vincent Lostanlen
+	Graham Dove, Ho-Hsiang Wu1, Justin Salamon, Oded Nov, and Juan Pablo Bello},
+	title = {SONYC URBAN SOUND TAGGING (SONYC-UST):
+	A MULTILABEL DATASET FROM AN URBAN ACOUSTIC SENSOR NETWORK},
+	howpublished = {Detection and Classification of Acoustic Scenes and Events 201},
+	month = {October},
+	year = {2019},
 	
-	year = 2013,
 }
 
-@manual{Kitware:2003,
-  title = {Environmental noise pollution in the united states: developing an
-  effective public health response},
-  organization = {Kitware, Inc.},
-  year = {2003},
-  month = {January},
-	url = {http://www.kitware.com/publications/item/view/1269}
+@mastersthesis{5,
+	author = {Mark Cartwright, Ayanna Seals, Justin Salamon, Alex Williams, Stefanie Mikloska, Duncan MacConnell, Edith Law, Juan P. Bello, and Oded Nov},
+	title = {Seeing Sound: Investigating the Effects of Visualizations and Complexity on Crowdsourced Audio Annotations},
+	address = {New York},
+	school = {New York University,University of Waterloo}
+	year = 2017,
 }
 
-@phdthesis{Levoy:1989:DSV,
-  author = {Marc Levoy},
-  title = {Display of Surfaces from Volume Data},
-  school = {University of North Carolina at Chapel Hill},
-	address = {USA},
-	url = {http://www.cs.unc.edu/techreports/89-022.pdf},
-  year = {1989},
-}
-
-@article{Lorensen:1987:MCA,
- author = {Lorensen, William E. and Cline, Harvey E.},
- title = {Marching Cubes: A High Resolution {3D} Surface Construction Algorithm},
- journal = {SIGGRAPH Computer Graphics},
- volume = {21},
- number = {4},
- month = aug,
- year = {1987},
- pages = {163--169},
- doi = {10.1145/37402.37422},
-}
-
-@article{Max:1995:OMF,
- author = {Max, Nelson},
- title = {Optical Models for Direct Volume Rendering},
- journal = {IEEE Transactions on Visualization and Computer Graphics},
- volume = {1},
- number = {2},
- month = jun,
- year = {1995},
- pages = {99--108},
- doi = {10.1109/2945.468400},
-} 
-
-@inproceedings{Nielson:1991:TAD,
-  author = {Gregory M. Nielson and Bernd Hamann},
-  title = {The Asymptotic Decider: Removing the Ambiguity in Marching Cubes},
-  year = {1991},
-  booktitle = {Proc.\ Visualization},
-  pages = {83--91},
-  doi={10.1109/VISUAL.1991.175782},
-	publisher = {IEEE Computer Society},
-	address = {Los Alamitos},
-}
-
-@book{Ware:2004:IVP,
-  author = {Colin Ware},
-  title = {Information Visualization: Perception for Design},
-  edition = {2\textsuperscript{nd}},
-  year = 2004,
-  publisher = {Morgan Kaufmann Publishers Inc.},
-  address = {San Francisco},
-	doi = {https://doi.org/10.1016/B978-155860819-1/50001-7}
-}
-
-@ARTICLE{Wyvill:1986:DSS,
-  author = {Wyvill, Geoff and McPheeters, Craig and Wyvill, Brian},
-  title = {Data Structure for \emph{soft} Objects},
-  journal = {The Visual Computer},
-  year = {1986},
-  volume = {2},
-  pages = {227--234},
-  number = {4},
-  month = aug,
-  doi = {10.1007/BF01900346}
-}
