Introducation and Related Work changes

--- a/proposal/01-introduction.tex
+++ b/proposal/01-introduction.tex
@@ -1,7 +1,8 @@
 \section{Introduction}
-Noise Pollution is a grievous problem which needs to be tackled, as it’s a growing concern for many urban residents, many have reported that they suffered with behavioral and emotional consequences, such as difficulty in sleeping, relaxing and feeling annoyed, angry or upset ~\cite{1,2,3}. In order to mitigate this problem, there is a need to understand sound event detection. Sound event detection is defined as recognition of individual sound events in audio, e.g., “dog barking, engine exhaust noise” requiring estimation of onset and offset for distinct sound for sound event detection and identification of sound.
-
- Applications for sound event detection can found in areas of Healthcare, security, audio and video-based indexing and retrieval. Sound class classification is usually approached as a supervised learning, with sound classes defined beforehand, we have taken a labelled Spatial and Temporal recording data which comprises of 3068 labelled 10 sec recordings from the Sounds of New York City (SONYC) acoustic network (An acoustic network is a method of positioning equipment using sound waves). Using this data, we plan to develop an application where the authorities or the user can narrow down the sounds generated at any particular location. We also aim to address the Mismatch of the testing data in this dataset.
+Noise Pollution is a grievous problem which needs to be tackled, as it’s a growing concern for many urban residents.Sounds that are not particularly loud but are nonetheless undesirable and uncontrollable can have serious implications for the listener, particularly if they occur over a long period of time. The noise becomes much more upsetting if the source of noise is an agent or agency that has shown little concern for the individual who is suffering from the noise's effects and, as a result, has done nothing to reduce the noise. Noise is not only inconvenient and annoying, but it has also been proven to be a health hazard, many have reported that they suffered with behavioral and emotional consequences, such as difficulty in sleeping, relaxing and feeling annoyed, angry or upset ~\cite{1,2,3} and When intrusive noises continue, the body responds physiologically, and there is a risk of irreversible bodily damage - damage to the circulatory, cardiovascular, and gastrointestinal systems - over time.
 
 
-This can be done by applying machine learning algorithm on any dataset and integrating it with sensors, data analytics for the development of machine learning systems for real world urban noise monitoring. The model build from the data could be used on neighborhoods to better understand noise in that location and help the authorities mitigate the issue. The many challenges for building the model would be like to separate the sound sources of interest, identifying the similar sounds compared to the other data in the dataset, identifying the main source for generating the sound among others.     
+ In order to mitigate this problem, there is a need to understand sound event detection. Sound event detection is defined as recognition of individual sound events in audio, e.g., “dog barking, engine exhaust noise” requiring estimation of onset and offset for distinct sound for sound event detection and identification of sound. Applications for sound event detection can found in areas of Healthcare, security, audio and video-based indexing and retrieval. Sound class classification is usually approached as a supervised learning, with sound classes defined beforehand, we have taken a labeled Spatial and Temporal recording data which comprises of 3068 labeled 10 sec recordings from the Sounds of New York City (SONYC) acoustic network (An acoustic network is a method of positioning equipment using sound waves). Using this data, we plan to develop an application where the authorities or the user can narrow down the sounds generated at any particular location. We also aim to address the Mismatch of the testing data in this dataset.
+
+This can be done by applying machine learning algorithm on any dataset and integrating it with sensors, data analytics for the development of machine learning systems for real world urban noise monitoring. The model build from the data could be used on neighborhoods to better understand noise in that location and help the authorities mitigate the issue. The many challenges for building the model would be like to separate the sound sources of interest, identifying the similar sounds compared to the other data in the dataset, identifying the main source for generating the sound among others.   
+         
