--- a/proposal/03-data.tex
+++ b/proposal/03-data.tex
@@ -5,13 +5,12 @@ The audio files used were recorded using the SONYC acoustic sensor network for m
 
 The training, validation, and test subsets of the annotation data are contained in annotations.csv. Each row in the file represents one multi-label annotation of a recording—it might be a single citizen science volunteer's annotation, a single SONYC team member's annotation, or the SONYC team's agreed-upon ground truth (for more information, see the annotator id column description).
 
-The sensors in the test set will not disjoint from the training and validation subsets, but the test recordings are displaced in time, occurring after any of the recordings in the training and validation subset. We plan to use the test data to find out the aggregate of mismatch by using a Multi Label classification Machine Learning Model
+The sensors in the test set will not disjoint from the training and validation subsets, but the test recordings are displaced in time, occurring after any of the recordings in the training and validation subset. We plan to use the test data to find out the aggregate of mismatch by using a Multi Label classification Machine Learning Model.
 
 	
 	\begin{figure}[h!]
-		
 		\includegraphics[width=9cm]{figure1}
-		\caption{ Classes distibution in data}
+		\caption{ Classes distribution in data}
 	\end{figure}
 	
 
