--- a/proposal/05-timeline.tex
+++ b/proposal/05-timeline.tex
@@ -3,30 +3,30 @@
 	\resizebox{\columnwidth}{!}{%
 		\begin{tabular}{||c | c||} 
 			\hline\hline
-			Week & Task \\ [2ex]
+			Week & Task \\ [3ex]
 			\hline\hline
-			Week 1 & First week is to Analyze and Preprocess the dataset \\ [2ex]
+			Week 1 & First week is to Analyze and Preprocess the dataset. \\ [3ex]
 			\hline
-			Week 2 &  Parsing the dataset and Extracting features from audio files\\ [2ex]
+			Week 2 &  Parsing the dataset and Extracting features from Audio Files.\\ [3ex]
 			\hline
-			Week 3 & Extracting features and Analyzing audio files \\ [2ex]
+			Week 3 & Analyses of the extracted features.  \\ [4ex]
 			\hline
-			Week 4 & Construct and apply the machine learning model on the given data  \\ [2ex]
+			Week 4 & Construct and apply the machine learning model on the given data.  \\ [3ex]
 			\hline
-			Week 5 & Analyze and Infer results of the model\\ [2ex] 
+			Week 5 & Analyze and Infer results of the model.\\ [4ex] 
 			\hline 
-			Week 6 & Build a Backend system and develop API's for interaction with Frontend  \\ [2ex] 
+			Week 6 & Build a Back-end system and develop API's which would serve with spatial and temporal responses to visualize on Front-end.  \\ [3ex] 
 			\hline
-			Week 7 & Develop API's in the Backend \\ [2ex] 
+			Week 7 & Develop API's in the Back-end \\ [3ex] 
 			\hline
-			Week 8 & Develop Frontend component - SpatioTemporal analysis \\ [2ex] 
+			Week 8 & Develop Front-end component - Spatial-Temporal analysis of the dataset based on back-end responses. \\ [3ex] 
 			\hline
-			Week 9 & Develop Frontend component - Mistmatch analysis \\ [1ex] 
+			Week 9 & Develop Frontend component - Which would depict and address the mismatch problem of the dataset. \\ [3ex] 
 			\hline
-			Week 10 & Develop Frontend component - Integrate User Interaction \\ [1ex] 
+			Week 10 & Handling the edge cases of the system and improving on the system. \\ [3ex] 
 			\hline
 		\end{tabular}
 	}
 	\linebreak
 	\linebreak
-	
+
