--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -96,9 +96,9 @@
 	\item
 	Ashwin Bhaskar Srivatsa, E-mail: asriva36@uic.edu
 	\item
-	Sasanka Mouli Veleti, E-mail: ed.grimley@aol.com.
+	Sasanka Mouli Veleti, E-mail: svelet2@uic.edu
 	\item
-	Sidharth Veluvolu, Email:
+	Sidharth Veluvolu, Email: sveluv2@uic.edu
 }
 
 %other entries to be set up for journal
