updated related work

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -39,3 +39,19 @@
 	year = 2017,
 }
 
+@mastersthesis{6,
+	author = {Annamaria Mesaros, Toni Heittola, Tuomas Virtanen},
+	title = {TUT Database for Acoustic Scene Classification
+	and Sound Event Detection},
+	address = {Tampere, Finland},
+	school = {Department of Signal Processing
+	Tampere University of Technology}
+	year = 2016,
+}
+@mastersthesis{7,
+	data = {SONYC Urban Sound Tagging (SONYC-UST): a multilabel dataset from an urban acoustic sensor network}
+	author = {Mark Cartwright, Jason Cramer, Ana Elisa Mendez Mendez, Yu Wang, Ho-Hsiang Wu, Vincent Lostanlen,  Magdalena Fuentes, Graham Dove, Charlie Mydlarz, Justin Salamon, Oded Nov, Juan Pablo Bello}
+	year = {2020}
+}
+
+
