--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -85,7 +85,7 @@
 \vgtcpapertype{please specify}
 
 %% Paper title.
-\title{CS594 - Big Data Visualization \& Analytics: Proposal}
+\title{Spatiotemporal Analysis of Urban Noise Data}
 
 %% This is how authors are specified in the journal style
 
