--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -1,4 +1,4 @@
-@mastersthesis{1,
+@misc{1,
   author = { M. S. Hammer, T. K. Swinburn, and R. L. Neitzel},
   title = {Environmental noise pollution in the united states: developing an
   effective public health response},
@@ -6,14 +6,14 @@
 	
   year = 2013,
 }
-@mastersthesis{2,
+@misc{2,
 	author = {A. Bronzaft},
 	title = {Neighborhood noise and its consequences},
 	address = {New York},
 	school = {Survey Research Unit, School of Public Affairs, Baruch College}
 	year = 2007,
 }
-@mastersthesis{3,
+@misc{3,
 	author = {World Health Organization},
 	title = {Burden of disease from environmental noise: Quantification of healthy life years lost in europe},
 	address = {Europe},
@@ -31,7 +31,7 @@
 	
 }
 
-@mastersthesis{5,
+@misc{5,
 	author = {Mark Cartwright, Ayanna Seals, Justin Salamon, Alex Williams, Stefanie Mikloska, Duncan MacConnell, Edith Law, Juan P. Bello, and Oded Nov},
 	title = {Seeing Sound: Investigating the Effects of Visualizations and Complexity on Crowdsourced Audio Annotations},
 	address = {New York},
@@ -39,7 +39,7 @@
 	year = 2017,
 }
 
-@mastersthesis{6,
+@misc{6,
 	author = {Annamaria Mesaros, Toni Heittola, Tuomas Virtanen},
 	title = {TUT Database for Acoustic Scene Classification
 	and Sound Event Detection},
@@ -48,10 +48,19 @@
 	Tampere University of Technology}
 	year = 2016,
 }
-@mastersthesis{7,
-	data = {SONYC Urban Sound Tagging (SONYC-UST): a multilabel dataset from an urban acoustic sensor network}
+@misc{7,
+	title = {SONYC Urban Sound Tagging (SONYC-UST): a multilabel dataset from an urban acoustic sensor network}
 	author = {Mark Cartwright, Jason Cramer, Ana Elisa Mendez Mendez, Yu Wang, Ho-Hsiang Wu, Vincent Lostanlen,  Magdalena Fuentes, Graham Dove, Charlie Mydlarz, Justin Salamon, Oded Nov, Juan Pablo Bello}
 	year = {2020}
+	school = {New York University}
+	
+}
+@misc{6,
+	author = {Mark Cartwright, Jason Cramer, Ana Elisa Mendez Mendez, Yu Wang, Ho-Hsiang Wu, Vincent Lostanlen,  Magdalena Fuentes, Graham Dove, Charlie Mydlarz, Justin Salamon, Oded Nov, Juan Pablo Bello},
+	title = {SONYC Urban Sound Tagging (SONYC-UST): a multilabel dataset from an urban acoustic sensor network},
+	address = {New York USA},
+	school = {New York University}
+	year = 2020,
 }
 
 
