--- a/proposal/03-data.tex
+++ b/proposal/03-data.tex
@@ -3,12 +3,12 @@ In order to build a system which would visualize the various sound points in and
 
 The training, validation, and test subsets of the annotation data are contained in annotations.csv (see Figure 1). Each row in the file represents one multi-label annotation of a recording—it might be a single citizen science volunteer's annotation, a single SONYC team member's annotation, or the SONYC team's agreed-upon ground truth (for more information, see the annotator id column description).The audio files used were recorded using the SONYC acoustic sensor network for monitoring urban noise pollution. In New York City, over 60 distinct sensors have been placed accumulating the equivalent of more than 50 years of audio data, of which a small fraction was used. The data was sampled by picking the closest neighbors based on VGGish qualities of recordings with recognized classes of interest. All of the recordings are 10 seconds long and were made with the same microphones and gain settings. 
 
-The sensors in the test set will not disjoint from the training and validation subsets, but the test recordings are displaced in time, occurring after any of the recordings in the training and validation subset. We plan to use the test data to find out the aggregate of mismatch by using a Multi Label classification Machine Learning Model.
+The sensors in the test set will not disjoint from the training and validation subsets, but the test recordings are displaced in time, occurring after any of the recordings in the training and validation subset. We plan to use the test data to find out the aggregate of mismatch by using a Multi Label classification Machine Learning Model like support vector machines and artificial neural networks.
 
 In our work we would utilize the latitude and longitude columns to spatially locate the sound origin, the year, week, day, hour columns to precisely point the time and the engine, machinery-impact, non-machinery-impact, powered-saw etc. columns to get the sound type and analyze and visualize the data.
 	\begin{figure}[h!]
 		\includegraphics[width=9cm]{figure1}
-		\caption{Distribution of various sound tags in test, train, validate sets of     dataset}
+		\caption{Distribution of various sound tags in test, train, validate sets of dataset}
 	\end{figure}
 	
 
