Changes to Introduction.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -63,4 +63,11 @@
 	year = 2020,
 }
 
+@misc{8,
+	author = {Toni Heittola, Annamaria Mesaros, Antti Eronen, Tuomas Virtanen},
+	title = {Context-dependent sound event detection},
+	howpublished = {EURASIP Journal on Audio, Speech, and Music Processing},
+	month = {January},
+	year = {2013}	
+}
 
