--- a/proposal/05-timeline.tex
+++ b/proposal/05-timeline.tex
@@ -9,21 +9,21 @@
 			\hline
 			Week 2 &  Parsing the dataset and Extracting features from Audio Files.\\ [3ex]
 			\hline
-			Week 3 & Analyses of the extracted features.  \\ [4ex]
+			Week 3 & Analyses the extracted features and feature engineering  \\ [4ex]
 			\hline
 			Week 4 & Construct and apply the machine learning model on the given data.  \\ [3ex]
 			\hline
-			Week 5 & Analyze and Infer results of the model.\\ [4ex] 
+			Week 5 & Analyze and Infer results from the model.\\ [4ex] 
 			\hline 
 			Week 6 & Build a Back-end system and develop API's which would serve with spatial and temporal responses to visualize on Front-end.  \\ [3ex] 
 			\hline
 			Week 7 & Develop API's in the Back-end \\ [3ex] 
 			\hline
-			Week 8 & Develop Front-end component - Spatial-Temporal analysis of the dataset based on back-end responses. \\ [3ex] 
+			Week 8 & Develop Front-end component - Spatiotemporal analysis of the dataset based on back-end responses. \\ [3ex] 
 			\hline
-			Week 9 & Develop Frontend component - Which would depict and address the mismatch problem of the dataset. \\ [3ex] 
+			Week 9 & Develop Frontend component - Which would depict and address the mismatch problem of the test dataset. \\ [3ex] 
 			\hline
-			Week 10 & Handling the edge cases of the system and improving on the system. \\ [3ex] 
+			Week 10 & Handling the edge cases and improving the system. \\ [3ex] 
 			\hline
 		\end{tabular}
 	}
